Add search function

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
        <div class="card">
            <img src="images/tree leche.jpg" alt="">
        </div>
+       <div class="card">
+           <img src="images/vanilla sponge.jpg" alt="">
+       </div>
    </div>   
 
     <script src="script.js"></script>
