Added pictture and some JS

--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />-->
     <link rel="stylesheet" href="styles/style.css">
-    <title>Expending Cards</title>
+    <title>Pictures</title>
 </head>
 <body>
     <div class="main">
-        <div class="card">
+        <div class="card ">
             <img src="images/cheesecake.jpg" alt="">
         </div>
     
@@ -36,8 +36,11 @@
        <div class="card">
            <img src="images/vanilla sponge.jpg" alt="">
        </div>
+       <div class="card">
+           <img src="images/noPictureDesserts.jpg" alt="">
+       </div>
    </div>   
 
-    <script src="script.js"></script>
+    <script src="styles/script.js"></script>
 </body>
 </html>
