--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
        <div class="card">
            <img src="images/noPictureDesserts.jpg" alt="">
        </div>
+       <div class="card">
+        <img src="images/apple.jpg" alt="">
+    </div>
    </div>   
 
     <script src="styles/script.js"></script>
