--- a/index.html
+++ b/index.html
@@ -1,49 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />-->
+    <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" />-->
     <link rel="stylesheet" href="styles/style.css">
     <title>Pictures</title>
 </head>
+
 <body>
     <div class="main">
         <div class="card ">
             <img src="images/cheesecake.jpg" alt="">
         </div>
-    
-       <div class="card">
-           <img src="images/chocolate cake.jpg" alt="">
-       </div>
 
-       <div class="card">
-           <img src="images/churros.jpg" alt="">
-       </div>
+        <div class="card">
+            <img src="images/chocolate cake.jpg" alt="">
+        </div>
 
-       <div class="card">
-           <img src="images/empanadas.jpg" alt="">
-       </div>
+        <div class="card">
+            <img src="images/churros.jpg" alt="">
+        </div>
 
-       <div class="card">
-           <img src="images/tart ge lima.jpg" alt="">
-       </div>
+        <div class="card">
+            <img src="images/empanadas.jpg" alt="">
+        </div>
 
-       <div class="card">
-           <img src="images/tree leche.jpg" alt="">
-       </div>
-       <div class="card">
-           <img src="images/vanilla sponge.jpg" alt="">
-       </div>
-       <div class="card">
-           <img src="images/noPictureDesserts.jpg" alt="">
-       </div>
-       <div class="card">
-        <img src="images/apple.jpg" alt="">
+        <div class="card">
+            <img src="images/tart ge lima.jpg" alt="">
+        </div>
+
+        <div class="card">
+            <img src="images/tree leche.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/vanilla sponge.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/noPictureDesserts.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/apple.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/coconutmousse.jpg" alt="">
+        </div>
+
     </div>
-   </div>   
 
     <script src="styles/script.js"></script>
 </body>
+
 </html>
