--- a/index.html
+++ b/index.html
@@ -48,6 +48,22 @@
             <img src="images/coconutmousse.jpg" alt="">
         </div>
 
+        <div class="card">
+            <img src="images/strwberrypanacotta.jpg" alt="">
+        </div>
+
+        <div class="card">
+            <img src="images/strawberryamenittis.jpg" alt="">
+        </div>
+
+        <div class="card">
+            <img src="images/aft.jpg" alt="">
+        </div>
+
+        <div class="card">
+            <img src="images/cheeseamenitis.jpg" alt="">
+        </div>
+
     </div>
 
     <script src="styles/script.js"></script>
