Added new pictures

--- a/index.html
+++ b/index.html
@@ -64,6 +64,18 @@
             <img src="images/cheeseamenitis.jpg" alt="">
         </div>
 
+        <div class="card">
+            <img src="images/Raspberry_cheesecake.jpg" alt="">
+        </div>
+
+        <div class="card">
+            <img src="images/stykey_toffe.jpg" alt="">
+        </div>
+
+        <div class="card">
+            <img src="images/brownie.jpg" alt="">
+        </div>
+
     </div>
 
     <script src="styles/script.js"></script>
