Added new pictures

--- a/index.html
+++ b/index.html
@@ -76,6 +76,25 @@
             <img src="images/brownie.jpg" alt="">
         </div>
 
+        <div class="card">
+            <img src="images/scones.jpg" alt="">
+        </div>
+
+        <div class="card">
+            <img src="images/passioncake.jpg" alt="">
+        </div>
+
+        <div class="card">
+            <img src="images/pistachio opera.jpg" alt="">
+        </div>
+
+        <div class="card">
+            <img src="images/cherry mousse.jpg" alt="">
+        </div>
+
+        <div class="card">
+            <img src="images/coconut.jpg" alt="">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
