--- a/index.html
+++ b/index.html
@@ -95,6 +95,15 @@
         <div class="card">
             <img src="images/coconut.jpg" alt="">
         </div>
+        <div class="card">
+            <img src="images/Cheese plate.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/queens cake.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/jams.jpg" alt="">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
