--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
         <div class="card">
             <img src="images/birthday cake.jpg" alt="">
         </div>
+        <div class="card">
+            <img src="images/petitfours.jpg" alt="">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
