--- a/index.html
+++ b/index.html
@@ -113,6 +113,9 @@
         <div class="card">
             <img src="images/macaroons.jpg" alt="">
         </div>
+        <div class="card">
+            <img src="images/coconut panacotta.jpg.jpg" alt="" height="300px" width="400px">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
