--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <img src="images/macaroons.jpg" alt="">
         </div>
         <div class="card">
-            <img src="images/coconut panacotta.jpg.jpg" alt="" height="300px" width="400px">
+            <img src="images/coconut-panacotta.jpg" alt="" height="300px" width="400px">
         </div>
     </div>
 
