--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <img src="images/macaroons.jpg" alt="">
         </div>
         <div class="card">
-            <img src="images/coconut-panacotta.jpg" alt="">
+            <img src="images/coconutpanacotta.jpg" alt="">
         </div>
     </div>
 
