--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
 
         <div class="card ">
-            <img src="images/churros.jpg" alt="" >
+            <img src="images/churros.jpg" alt="">
         </div>
 
         <div class="card">
@@ -115,6 +115,24 @@
         </div>
         <div class="card">
             <img src="images/coconutpanacotta.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/nuttelacheese.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/aftchestnut.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/aftcranberrymacaroon.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/aftx-mastree.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/aftyuzucake.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/Lemon tart.jpg" alt="">
         </div>
     </div>
 
