--- a/index.html
+++ b/index.html
@@ -134,6 +134,36 @@
         <div class="card">
             <img src="images/Lemon tart.jpg" alt="">
         </div>
+        <div class="card">
+            <img src="images/baklava.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/patedefruit.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/cheeseplate1.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/lrgfruit.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/midfruit1.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/smallfruit.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/truffles.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/dates.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/macaroons1.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/florentines.jpg" alt="">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
