--- a/index.html
+++ b/index.html
@@ -164,6 +164,18 @@
         <div class="card">
             <img src="images/florentines.jpg" alt="">
         </div>
+        <div class="card">
+            <img src="images/NutellaChoux.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/Matcha.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/RaspberryBall.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/MangoDelice.jpg" alt="">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
