--- a/index.html
+++ b/index.html
@@ -176,6 +176,9 @@
         <div class="card">
             <img src="images/MangoDelice.jpg" alt="">
         </div>
+        <div class="card">
+            <img src="images/aftMarcg.jpg" alt="">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
