--- a/index.html
+++ b/index.html
@@ -179,6 +179,12 @@
         <div class="card">
             <img src="images/aftMarcg.jpg" alt="">
         </div>
+        <div class="card">
+            <img src="images/mango cake.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/almond cake.jpg" alt="">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
