--- a/index.html
+++ b/index.html
@@ -185,6 +185,9 @@
         <div class="card">
             <img src="images/almond cake.jpg" alt="">
         </div>
+        <div class="card">
+            <img src="images/aft - Copy.jpg" alt="">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
