--- a/index.html
+++ b/index.html
@@ -188,6 +188,18 @@
         <div class="card">
             <img src="images/aft - Copy.jpg" alt="">
         </div>
+        <div class="card">
+            <img src="images/20220823_110802-aft (2).jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/20220823_110802-aft (3).jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/20220823_110802-aft (4).jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/20220823_110802-aft (5).jpg" alt="">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
