--- a/index.html
+++ b/index.html
@@ -200,6 +200,18 @@
         <div class="card">
             <img src="images/20220823_110802-aft (5).jpg" alt="">
         </div>
+        <div class="card">
+            <img src="images/Christams afternoon tea--bailey's cheesecake.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/Christams afternoon tea--cranberry and apple macaroon.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/Christams afternoon tea - pandepiece.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/Christams afternoon tea--mount blanc.jpg" alt="">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
