--- a/index.html
+++ b/index.html
@@ -212,6 +212,9 @@
         <div class="card">
             <img src="images/Christams afternoon tea--mount blanc .jpg" alt="">
         </div>
+        <div class="card">
+            <img src="images/trio of desserts.jpg" alt="">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
