--- a/index.html
+++ b/index.html
@@ -215,6 +215,18 @@
         <div class="card">
             <img src="images/trio of desserts.jpg" alt="">
         </div>
+        <div class="card">
+            <img src="images/Apple jastmin.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/bergamont  delice.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/Honey cake and lavender.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/Tonka bean .jpg" alt="">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
