--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
         <div class="card">
             <img src="images/Tonka bean .jpg" alt="">
         </div>
+        <div class="card">
+            <img src="images/chocolate bonbons.jpg" alt="">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
