--- a/index.html
+++ b/index.html
@@ -230,6 +230,18 @@
         <div class="card">
             <img src="images/chocolate bonbons.jpg" alt="">
         </div>
+        <div class="card">
+            <img src="images/lavender eclair.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/peach tart1.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/savarine.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/Champagne cube 1.jpg" alt="">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
