--- a/index.html
+++ b/index.html
@@ -242,6 +242,18 @@
         <div class="card">
             <img src="images/Champagne cube 1.jpg" alt="">
         </div>
+        <div class="card">
+            <img src="images/christmas 23.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/christmas 23-3.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/christmas 23-1.jpg" alt="">
+        </div>
+        <div class="card">
+            <img src="images/christmas 2-5.jpg" alt="">
+        </div>
     </div>
 
     <script src="styles/script.js"></script>
